  `--fsck-fix` or `--fsck-rm-unused` settings are used. He also made
  it not check for unused chunks when it's useless to do so, because
  of various `--fsck-skip` settings are used.

* David Fries added the `--to` option to `obnam verify` with the same
  semantics as `obnam restore`.  Now a restore with `--to` can be
  verified.

Bug fixes:

* The Obnam SFTP plugin would loop infinitely if it lost the
  connection to the SSH server while creating a temporary file. Itamar
  Turner-Trauring provided a fix for this.

* Will Dyson fixed a bug about locking while removing checkpoint
  generations.

Version 1.8, released 2014-05-13
--------------------------------

* The error message has been improved for when setting metadata
  (owner, permission, and similar) of a restored file fails.

* `obnam force-lock` now works even when the client running it is not
  in the client list.

Security issues:

* Joey Hess found a problem in `obnam restore`: restored files would
  be created with quite liberal default permissions, which would be
  set to the backed-up permissions later. This could allow a snooper
  to read files they shouldn't be. This has been fixed now by using
  restrictive default permissions. A workaround for older versions is
  to create a directory, set its permissions to 0700, and restore to a
  subdirectory of that directory.

Bug fixes:

* `--help` output no longer shows the default value of any options. It
  was shown only for a few options anyway. The proper way to see the
  current settings is with the `--dump-config` option. The bug that
  was fixed that the generated manual page no longer contains values
  that are specific to the machine doing the generation, such as the
  hostname as the default value for `--client-name`. Reported by
  SanskritFritz.

* When a file was backed up, and later excluded with `--exclude`,
  Obnam wouldn't remove it from the new backups. Now it does. Bug
  fixed by Anssi Hannula, though his patch got changed because it no